--- a/macros/button_classes.html.twig
+++ b/macros/button_classes.html.twig
@@ -5,6 +5,7 @@
 	{% if color == 'warning' %}orange{% endif %}
 	{% if color == 'danger' %}red{% endif %}
 	{% if size == 'large' or size == 'extra-large' %}large{% endif %}
+	{% if size == 'small' or size == 'extra-small' or size == 'tiny' %}small{% endif %}
 
 	{{ type }}
 	{{ extra }}
