--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -12,7 +12,8 @@ input[type="submit"] {
   @include border-radius(2px);
   line-height: $button-line-height;
   text-transform: uppercase;
-  border:none;
+  border: none;
+  outline: 0;
   // Gets rid of tap active state
   -webkit-tap-highlight-color: transparent;
 }
@@ -58,7 +59,7 @@ input[type="submit"] {
   color: $button-color-raised;
   background-color: $button-color;
   text-align: center;
-  letter-spacing: .8px;
+  letter-spacing: .5px;
   @extend .z-depth-1;
   @include transition(.2s ease-out);
   cursor: pointer;
