Fix layout conditionals

--- a/views/base.twig
+++ b/views/base.twig
@@ -1,7 +1,7 @@
 {% import 'grid_classes.html.twig' as grid %}
 <main>
 	{% do action( 'maera/wrap/before', post.ID ) %}
-	{% if sidebar.primary and 0 != layout %}
+	{% if 0 != layout %}
 		<div class="{{ grid.row() }}">
 			<div class="{{ 'main-content-area'|apply_filters( 'maera/section_class/content' ) }} main-content-wrapper">
 				{% endif %}
@@ -12,7 +12,7 @@
 					{% do action( 'maera/main/after', post.ID ) %}
 				</div>
 				{% do action( 'maera/content/after' ) %}
-				{% if sidebar.primary and 0 != layout %}
+				{% if 0 != layout %}
 			</div>
 			<div class="{{ 'sidebar'|apply_filters( 'maera/section_class/primary' ) }}">
 				{{ sidebar.primary }}
